--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,6 +1,6 @@
 body {
 	font-family: "Yugioh", serif;
-	background-image: url(../imagens/fundo-site.jpg);
+	background-image: url(/imagens/fundo-site.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
     display: flex;
