--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -1,6 +1,6 @@
 body {
 	font-family: "Yugioh", serif;
-	background-image: url(../imagens/fundo-site.jpg);
+	background-image: url(/imagens/fundo-site.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
     display: flex;
@@ -16,7 +16,7 @@ body {
 }
 
 .cabecalho .titulo {
-	background-image: url(../imagens/fundo-site.jpg);
+	background-image: url(/imagens/fundo-site.jpg);
 }
 
 .cartao {
@@ -60,7 +60,7 @@ body {
 .cartao .estrela {
 	width: 20px;
 	height: 20px;
-	background-image: url(../imagens/nivel-carta.png);
+	background-image: url(/imagens/nivel-carta.png);
 	background-size: contain;
 	background-repeat: no-repeat;
 	display: inline-block;
@@ -109,25 +109,25 @@ body {
 }
 
 .fundo-1 {
-	background: url(../imagens/fundo-1.jpg) no-repeat;
+	background: url(/imagens/fundo-1.jpg) no-repeat;
 }
 .fundo-2 {
-	background: url(../imagens/fundo-2.jpg) no-repeat;
+	background: url(/imagens/fundo-2.jpg) no-repeat;
 }
 .fundo-3 {
-	background: url(../imagens/fundo-3.jpg) no-repeat;
+	background: url(/imagens/fundo-3.jpg) no-repeat;
 }
 .fundo-4 {
-	background: url(../imagens/fundo-4.jpg) no-repeat;
+	background: url(/imagens/fundo-4.jpg) no-repeat;
 }
 .fundo-5 {
-	background: url(../imagens/fundo-5.jpg) no-repeat;
+	background: url(/imagens/fundo-5.jpg) no-repeat;
 }
 .fundo-6 {
-	background: url(../imagens/fundo-6.jpg) no-repeat;
+	background: url(/imagens/fundo-6.jpg) no-repeat;
 }
 .fundo-7 {
-	background: url(../imagens/fundo-7.jpg) no-repeat;
+	background: url(/imagens/fundo-7.jpg) no-repeat;
 }
 
 .btn-seta{
@@ -178,7 +178,7 @@ body::-webkit-scrollbar-track{
 	width: 100%;
 	height: 100%;
 	position: absolute;
-	background: url(../imagens/fundo-carta.jpg);
+	background: url(/imagens/fundo-carta.jpg);
 	background-size: cover;
 	background-position: center;
 	top: 0;
